Update style.css with alignment and style fixes

--- a/style.css
+++ b/style.css
@@ -212,17 +212,7 @@ nav .fas {
   position: relative;
 }
 
-/* Optional: underline for subtitles
-.sub-title::after {
-    content: '';
-    width: 60px;
-    height: 4px;
-    background: var(--primary-color);
-    position: absolute;
-    bottom: -10px;
-    left: 0;
-    border-radius: 2px;
-} */
+
 
 .tab-titles {
   display: flex;
